# suttonandbartocpp

./: CMakeLists.txt  data_plotter.py  main.cpp
ch2/: ArmedTestbed.cpp  ArmedTestbed.h  ArmedTestbedNonstationary.cpp  ArmedTestbedNonstationary.h  EpsilonGreedyAgent.cpp  EpsilonGreedyAgent.h  Exercise_2_5.cpp  Exercise_2_5.h  optimal_actions_alpha_stationary.txt  optimal_actions_eg_stationary.txt
